add page header and intro to webpage

--- a/dog-blog.html
+++ b/dog-blog.html
@@ -4,7 +4,10 @@
     <title>Dog Blog: Queen Rozz</title>
   </head>
   <body>
-    <h1>The Basics</h1>
+    <h1>Queen Rozz</h1>
+    <p>Meet Rozzy, my sweet little pup. Here's a little about her.</p>
+    
+    <h2>The Basics</h2>
     <ul>
       <li>Breed: Cockapoo (Poodle and Cocker Spaniel mix)</li>
       <li>Color: Black</li>
@@ -12,7 +15,7 @@
       <li>Age: 14</li>
     </ul>
 
-    <h1>Her Likes</h1>
+    <h2>Her Likes</h2>
     <ul>
       <li>Doggy cuddles</li>
       <li>Doggy kisses and licks</li>
@@ -24,7 +27,7 @@
       <li>Car rides with her humans</li>
     </ul>
 
-    <h1>Her Dislikes</h1>
+    <h2>Her Dislikes</h2>
     <ul>
       <li>Vacuums</li>
       <li>Rain (or anything wet)</li>
