add strong and emphasis inlines for practice

--- a/dog-blog.html
+++ b/dog-blog.html
@@ -4,7 +4,7 @@
     <title>Dog Blog: Queen Rozz</title>
   </head>
   <body>
-    <h1>Queen Rozz</h1>
+    <h1>Queen <strong>Rozz</strong>/h1>
     <p>Meet Rozzy, my sweet little pup. Here's a little about her.</p>
     
     <h2>The Basics</h2>
@@ -22,7 +22,7 @@
       <li>Chasing her ball</li>
       <li>Fighting for her toys</li>
       <li>Running around huge, open spaces</li>
-      <li>Sleeping, lots and lots of sleeping</li>
+      <li>Sleeping, <em>lots and lots of sleeping</em></li>
       <li>Being cozy and warm</li>
       <li>Car rides with her humans</li>
     </ul>
@@ -30,13 +30,13 @@
     <h2>Her Dislikes</h2>
     <ul>
       <li>Vacuums</li>
-      <li>Rain (or anything wet)</li>
+      <li>Rain <em>(or anything wet)</em></li>
       <li>Being cold</li>
       <li>Her new diet wet food</li>
       <li>When her humans pet another dog</li>
       <li>Other doggos</li>
     </ul>
 
-    <p>Rozz, short for Rozzy, has been the light of my life for the last fourteen years. She's sassy, has a huge personality, and loves her humans.</p>
+    <p>Rozz, short for Rozzy, has been the light of my life for the last <strong>fourteen</strong> years. She's sassy, has a huge personality, and loves her humans.</p>
   </body>
 </html>
