--- a/dog-blog.html
+++ b/dog-blog.html
@@ -6,10 +6,11 @@
   <body>
     <h1>Queen <strong>Rozz</strong>/h1>
     <p>Meet Rozzy, my sweet little pup. Here's a little about her.</p>
+    <img src="img/rozzy.jpeg" alt="A photo of Rozzy.">
     
     <h2>The Basics</h2>
     <ul>
-      <li>Breed: Cockapoo (Poodle and Cocker Spaniel mix)</li>
+      <li>Breed: Cockapoo <a href="http://en.wikipedia.org/wiki/Cockapoo">(Click here to learn more)</a></li>
       <li>Color: Black</li>
       <li>Weight: 15lbs</li>
       <li>Age: 14</li>
