fix blog page main header code

--- a/dog-blog.html
+++ b/dog-blog.html
@@ -4,7 +4,7 @@
     <title>Dog Blog: Queen Rozz</title>
   </head>
   <body>
-    <h1>Queen <strong>Rozz</strong>/h1>
+    <h1>Queen <strong>Rozz</strong></h1>
     <p>Meet Rozzy, my sweet little pup. Here's a little about her.</p>
     <img src="img/rozzy.jpeg" alt="A photo of Rozzy.">
     
