--- a/dog-blog.html
+++ b/dog-blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Dog Blog: Queen Rozz</title>
   </head>
   <body>
